答题卡样式修改

--- a/aixueDemo/02问答题.html
+++ b/aixueDemo/02问答题.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html>
 <head>
-    <title>两种样式横竖屏</title>
+    <title>爱学派</title>
     <meta name="description" content="中国最大的远程基础教育服务机构和网络学习社区，面向全国的中、小学生提供远程教育辅导。"/>
     <meta name="keywords" content="网校,远程教育,四中"/>
     <meta http-equiv=Content-Type content="text/html; charset=utf-8"/>
